--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.22.6
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -28,11 +28,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  intl: ^0.16.0
+  intl: ^0.16.1
   sqflite: ^1.1.0
   flutter_simple_dependency_injection: ^1.0.1
   path_provider: ^0.5.0+1
 
+
+dependency_overrides:
+  intl: ^0.16.1
+  path: ^1.7.0
 
 dev_dependencies:
   flutter_test:
