--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,14 @@ dependencies:
   intl: ^0.17.0
   sqflite: ^1.1.0
   flutter_simple_dependency_injection: ^1.0.1
-  path_provider: ^1.6.27
+  path_provider: ^2.0.1
   screenshot: ^0.3.0
   share: ^0.6.5+4
-  easy_localization: ^2.3.3+1
+  easy_localization: ^3.0.0
   flutter_launcher_icons: "^0.9.0"
+  url_launcher: ^6.0.4
+  firebase_core: "^1.2.0"
+  firebase_analytics: "^8.1.0"
 
 
 dependency_overrides:
