--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.3.0
+version: 1.4.1+3
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -39,6 +39,7 @@ dependencies:
   url_launcher: ^6.0.4
   firebase_core: "^1.2.0"
   firebase_analytics: "^8.1.0"
+  clipboard: ^0.1.3
 
 
 dependency_overrides:
