--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: "^1.2.0"
   firebase_analytics: "^8.1.0"
   clipboard: ^0.1.3
+  flutter_typeahead: ^3.1.3
+  flutter_colorpicker: ^0.4.0
 
 
 dependency_overrides:
