--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   clipboard: ^0.1.3
   flutter_typeahead: ^3.1.3
   flutter_colorpicker: ^0.4.0
+  category_picker: ^1.0.1
+
 
 
 dependency_overrides:
