--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.5.0+4
+version: 1.6.0+5
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -41,8 +41,10 @@ dependencies:
   firebase_analytics: "^8.1.0"
   clipboard: ^0.1.3
   flutter_typeahead: ^3.1.3
-  flutter_colorpicker: ^0.4.0
+  flutter_colorpicker: ^0.6.0
   category_picker: ^1.0.1
+  get: ^4.3.8
+  shared_preferences: ^2.0.8
 
 
 
