--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
                   <category android:name="android.intent.category.DEFAULT"/>
                   <category android:name="android.intent.category.BROWSABLE"/>
     <data
-        android:host="example.com"
+        android:host="mealpy.page.link"
         android:scheme="https"/>
             </intent-filter>
         </activity>
