--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,4 +74,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.billingclient:billing:4.0.0'
+
 }
