--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shared_preferences: ^2.0.8
   firebase_database: ^9.0.6
   firebase_auth: ^3.3.6
+  firebase_dynamic_links: ^4.0.5
   auth_buttons: ^2.0.4
   google_sign_in: ^5.2.3
   multiselect: 
