--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 2.1.0+12
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -27,13 +27,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.4
   intl: ^0.17.0
-  sqflite: ^1.1.0
-  flutter_simple_dependency_injection: ^1.0.1
+  sqflite: ^2.0.2
+  flutter_simple_dependency_injection: ^2.0.0
   path_provider: ^2.0.1
-  screenshot: ^0.3.0
-  share: ^0.6.5+4
+  screenshot: ^1.2.3
+  share: ^2.0.4
   easy_localization: ^3.0.0
   flutter_launcher_icons: "^0.9.0"
   url_launcher: ^6.0.4
@@ -42,7 +42,7 @@ dependencies:
   clipboard: ^0.1.3
   flutter_typeahead: ^3.1.3
   flutter_colorpicker: ^0.6.0
-  category_picker: ^1.0.1
+  group_button: ^4.5.0
   get: ^4.3.8
   shared_preferences: ^2.0.8
   firebase_database: ^9.0.6
