--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 2.1.6+16
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.19.0'
 
 dependencies:
   flutter:
@@ -35,24 +35,24 @@ dependencies:
   screenshot: ^1.2.3
   share: ^2.0.4
   easy_localization: ^3.0.0
-  flutter_launcher_icons: "^0.9.0"
+  flutter_launcher_icons: ^0.11.0
   url_launcher: ^6.0.4
-  firebase_core: "^1.2.0"
-  firebase_analytics: "^8.1.0"
+  firebase_core: ^2.7.0
+  firebase_analytics: ^10.1.4
   clipboard: ^0.1.3
-  flutter_typeahead: ^3.1.3
-  flutter_colorpicker: ^0.6.0
-  group_button: ^4.5.0
-  get: ^4.3.8
+  flutter_typeahead: ^4.3.7
+  flutter_colorpicker: ^1.0.3
+  group_button: ^5.2.2
+  get: ^4.6.5
   shared_preferences: ^2.0.8
-  firebase_database: ^9.0.6
-  firebase_auth: ^3.3.6
-  firebase_dynamic_links: ^4.0.5
-  auth_buttons: ^2.0.4
-  google_sign_in: ^5.2.3
-  in_app_purchase: ^2.0.1
-  multiselect: 
-    git: https://github.com/Barhuda/multiselect
+  firebase_database: ^10.0.14
+  firebase_auth: ^4.2.9
+  firebase_dynamic_links: ^5.0.15
+  auth_buttons: ^3.0.0
+  google_sign_in: ^6.0.1
+  in_app_purchase: ^3.1.5
+  states_rebuilder: ^6.2.0
+  multiselect: ^0.1.0
 
 
 
