--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
-  intl: ^0.17.0
+  google_fonts: ^5.1.0
+  intl: ^0.18.0
   sqflite: ^2.0.2
   flutter_simple_dependency_injection: ^2.0.0
   path_provider: ^2.0.1
-  screenshot: ^1.2.3
+  screenshot: ^2.1.0
   share: ^2.0.4
   easy_localization: ^3.0.0
   flutter_launcher_icons: ^0.11.0
@@ -51,12 +52,13 @@ dependencies:
   auth_buttons: ^3.0.0
   google_sign_in: ^6.0.1
   in_app_purchase: ^3.1.7
-  states_rebuilder: ^6.2.0
+  states_rebuilder: ^6.3.0
   multiselect: ^0.1.0
 
 
 
 dependency_overrides:
+  google_fonts: ^5.1.0
 
 
 
