--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -10,7 +10,7 @@
 	</array>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinkgs:mealpy.page.link</string>
+		<string>applinks:mealpy.page.link</string>
 	</array>
 </dict>
 </plist>
