--- a/ios/Runner/RunnerRelease.entitlements
+++ b/ios/Runner/RunnerRelease.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinkgs:mealpy.page.link</string>
+		<string>applinks:mealpy.page.link</string>
 	</array>
 </dict>
 </plist>
